--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang = "en-us">
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
     <head>
         <title>
         Portfolio -- Home
@@ -7,11 +8,50 @@
     </head>
 
 
-
     <body>
-        Portfolio site home page.<br>
 
-    </body>
+        <div id = "header">
+            <h1>Danielle Smith.</h1>
+        </div>
+
+
+        <!--
+            Button link leading to profile page -- background/bio
+        -->
+
+        
+
+        <div id = "profile" class = "right">
+            Profile <br>
+        </div>
+
+
+        <!--
+            Button link leading to portfolio page
+        -->
+
+        <div id = "portfolio" class = "right">
+            Portfolio <br>
+        </div>
+
+
+
+        <!--
+            Button link leading to contact info
+        -->
+
+        <div id = "contact" class = "right">
+            Contact <br>
+        </div>
+
+
+
+
+
+
+
+    </bod
+    y>
 
 
 </html>
