Added additional boxes, improved layout.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
         <div id = "boxes" class = "container">
 
             <div class = "row">
+                <div id = "splashBox" class = "col-md-12 left box">
+                    <h4 class = "left boxHeader">
+                        Welcome!
+                    </h4>
+                </div>
+            </div>
+
+
+            <div class = "row">
                 <div id = "contactBox" class = "col-md-4 left box">
                     <h2 class = "left boxHeader">
                         Contact
@@ -73,7 +82,7 @@
 
 
                     <p id = "contactText" class = "text left">
-                        This is the contact box.
+                        I can usually be reached by phone, text or email -- feel free to reach out to me with any questions about my website or my work!
                     </p>
                 </div>
 
