Added descriptions to Contact, Portfolio, and Profile.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </h3>
                     <div>
                         <p id = "portfolioText" class = "text left">
-                            This is the portfolio box.
+                            View a selection of my work! Click the links below to see my current projects!
                         </p>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     </h4>
 
                     <p id = "profileText" class = "text left">
-                        This is the profile box.
+                        As a recent graduate of community college, I'm just getting my feet wet in the world of professional programming. I have a broad foundation in the basics, though I'm still learning to apply what I've learned in college to the workplace, and in practical, useful applications. Visit my profile page to learn more about where I've come from, and where I'm going!
                     </p>
                 </div>
             </div>
