--- a/profile.html
+++ b/profile.html
@@ -63,8 +63,8 @@
 
 
         <div class = "row">
-            <div id = "splashBox" class = "col-md-12 left box">
-            Row.
+            <div id = "splashBox" class = "col-md-12 box">
+                <h2 class = "header"> Hello! </h2>
 
 
 
